{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "Move",
            "id": "5237b22e-e3cf-4dc9-a1ec-74fcaa30ed22",
            "actions": [
                {
                    "name": "Horizontal",
                    "type": "Button",
                    "id": "cd7aa23d-c623-4655-b679-32d895e99299",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "06654e9c-d5bc-425b-9fee-fcc3b2c1ef67",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d47bc094-d117-442d-8190-779bad729c88",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerMove",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f83fa9a4-0b11-43ae-8a3b-7a58d7858a09",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerMove",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe6778be-0dbe-4d56-8e77-be10c64391a8",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerMove",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ad00ee07-1c3e-4606-85f8-8d44065aadee",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerMove",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0df7417-a2ad-45b4-872f-07b02f667cda",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerMove",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PlayerMove",
            "bindingGroup": "PlayerMove",
            "devices": []
        }
    ]
}